Added contact dialog

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.0.1",
     "@angular/compiler": "~9.0.1",
     "@angular/core": "~9.0.1",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.1",
     "@angular/localize": "^9.0.1",
     "@angular/material": "^9.0.0",
@@ -34,6 +35,7 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "ng-bootstrap": "^1.6.3",
+    "ng-recaptcha": "^5.0.0",
     "ng2-slim-loading-bar": "^4.0.0",
     "node-sass": "^4.13.1",
     "node-sass-tilde-importer": "^1.0.2",
