--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
             "styles": [
               "src/styles.scss",
               "src/assets/styles/icons.scss",
-              "src/assets/styles/table.scss"
+              "src/assets/styles/table.scss",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -137,6 +138,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.sass",
               "src/assets/styles/icons.scss",
               "src/assets/styles/table.scss"
