--- a/angular.json
+++ b/angular.json
@@ -174,5 +174,8 @@
       }
     }
   },
-  "defaultProject": "GrepodataFrontend"
+  "defaultProject": "GrepodataFrontend",
+  "cli": {
+    "analytics": false
+  }
 }
