--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ng-bootstrap": "^1.6.3",
     "ng-recaptcha": "^5.0.0",
     "ng2-slim-loading-bar": "^4.0.0",
+    "ngx-charts": "^3.0.2",
     "node-sass": "^4.13.1",
     "node-sass-tilde-importer": "^1.0.2",
     "rxjs": "~6.5.4",
@@ -52,9 +53,10 @@
     "@angular/cli": "~9.0.2",
     "@angular/compiler-cli": "~9.0.1",
     "@angular/language-service": "~9.0.1",
-    "@types/node": "^12.11.1",
+    "@swimlane/ngx-charts": "^13.0.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.27",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
