--- a/angular.json
+++ b/angular.json
@@ -40,11 +40,13 @@
               "src/styles.scss",
               "src/assets/styles/icons.scss",
               "src/assets/styles/table.scss",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/cookieconsent/build/cookieconsent.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/cookieconsent/build/cookieconsent.min.js"
             ]
           },
           "configurations": {
@@ -139,6 +141,7 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/cookieconsent/build/cookieconsent.min.css",
               "src/styles.sass",
               "src/assets/styles/icons.scss",
               "src/assets/styles/table.scss"
