--- a/package.json
+++ b/package.json
@@ -34,18 +34,21 @@
     "@swimlane/ngx-charts": "^13.0.2",
     "angular-loading-bar": "^0.9.0",
     "bootstrap": "^4.4.1",
+    "cookieconsent": "^3.1.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "ng-bootstrap": "^1.6.3",
     "ng-recaptcha": "^5.0.0",
     "ng2-slim-loading-bar": "^4.0.0",
+    "ngx-cookieconsent": "^2.2.3",
     "node-sass": "^4.13.1",
     "node-sass-tilde-importer": "^1.0.2",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.4",
     "ts-md5": "^1.2.7",
     "tslib": "^1.10.0",
+    "vanilla-back-to-top": "^7.2.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
