--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "rxjs": "^6.5.4",
     "ts-md5": "^1.2.2",
     "vanilla-back-to-top": "^7.2.0",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.9.1",
+    "tslib": "^2.0.3"
   },
   "devDependencies": {
     "@angular/cli": "^8.3.29",
