--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.803.29",
-    "@angular/animations": "^8.2.14",
+    "@angular-devkit/build-angular": "^0.901.12",
+    "@angular/animations": "^9.1.12",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "^9.1.12",
     "@angular/compiler": "^9.1.12",
     "@angular/core": "^9.1.12",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "^8.2.14",
+    "@angular/forms": "^9.1.12",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/router": "^9.1.12",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
@@ -50,13 +50,12 @@
     "rxjs": "^6.5.4",
     "ts-md5": "^1.2.2",
     "vanilla-back-to-top": "^7.2.0",
-    "zone.js": "^0.9.1",
-    "tslib": "^2.0.3"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular/cli": "^8.3.29",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular/cli": "^9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
     "@types/google.analytics": "0.0.36",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -74,7 +73,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.5.3",
     "webpack-bundle-analyzer": "^3.6.0"
   }
 }
