Fix: Typescript 3.8 for Angular 9

--- a/angular.json
+++ b/angular.json
@@ -167,5 +167,8 @@
     "@schematics/angular:directive": {
       "prefix": "app"
     }
+  },
+  "cli": {
+    "analytics": "03a1da42-3418-4270-a14e-65b8ec14b6b8"
   }
 }
