--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/common": "^9.1.12",
     "@angular/compiler": "^9.1.12",
     "@angular/core": "^9.1.12",
-    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "^9.1.12",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^9.1.12",
@@ -60,7 +60,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.3.22",
-    "@types/node": "~6.0.60",
+    "@types/node": "~14.14.7",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -73,6 +73,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.11.0",
+    "typescript": "3.8.3",
     "webpack-bundle-analyzer": "^3.6.0"
   }
 }
