--- a/angular.json
+++ b/angular.json
@@ -158,11 +158,11 @@
   "defaultProject": "gd-frontend",
   "schematics": {
     "@schematics/angular:class": {
-      "spec": false
+      "skipTests": true
     },
     "@schematics/angular:component": {
       "prefix": "app",
-      "styleext": "scss"
+      "style": "scss"
     },
     "@schematics/angular:directive": {
       "prefix": "app"
