--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.901.12",
+    "@angular-devkit/build-angular": "^0.1100.1",
     "@angular/animations": "^11.0.0",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "^11.0.0",
-    "@angular/compiler": "^9.1.12",
+    "@angular/compiler": "^11.0.0",
     "@angular/core": "^11.0.0",
     "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "^11.0.0",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
-    "@angular/router": "^9.1.12",
+    "@angular/router": "^11.0.0",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
@@ -54,27 +54,27 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular/cli": "^9.1.12",
-    "@angular/compiler-cli": "^9.1.12",
-    "@angular/language-service": "^9.1.12",
+    "@angular/cli": "^11.0.1",
+    "@angular/compiler-cli": "^11.0.0",
+    "@angular/language-service": "^11.0.0",
     "@types/google.analytics": "0.0.36",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.3.22",
     "@types/node": "~14.14.7",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "codelyzer": "~6.0.1",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~3.2.0",
-    "tslint": "~5.11.0",
-    "typescript": "3.8.3",
+    "tslint": "~6.1.0",
+    "typescript": "4.0.5",
     "webpack-bundle-analyzer": "^3.6.0"
   }
 }
