--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
   "dependencies": {
     "@angular-devkit/build-angular": "^0.1100.1",
     "@angular/animations": "^11.0.0",
-    "@angular/cdk": "^10.2.7",
+    "@angular/cdk": "^11.0.0",
     "@angular/common": "^11.0.0",
     "@angular/compiler": "^11.0.0",
     "@angular/core": "^11.0.0",
-    "@angular/flex-layout": "^9.0.0-beta.31",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "^11.0.0",
-    "@angular/material": "^10.2.7",
+    "@angular/material": "^11.0.0",
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/router": "^11.0.0",
-    "@fortawesome/angular-fontawesome": "^0.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/free-brands-svg-icons": "^5.5.0",
-    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/angular-fontawesome": "^0.8.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ngx-share/button": "^7.0.0",
     "@ngx-share/buttons": "^7.0.0",
     "@ngx-share/core": "^7.0.0",
-    "@swimlane/ngx-charts": "^12.0.1",
+    "@swimlane/ngx-charts": "^16.0.0",
     "@types/bootstrap": "^4.1.2",
     "ajv": "^6.5.5",
     "ajv-keywords": "^3.2.0",
@@ -45,12 +45,13 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "moment": "^2.19.1",
-    "ng-recaptcha": "^4.2.1",
+    "ng-recaptcha": "^6.0.2",
     "ngx-sharebuttons": "^8.0.4",
     "npm": "^6.4.1",
     "rxjs": "^6.5.4",
     "ts-md5": "^1.2.2",
     "vanilla-back-to-top": "^7.2.0",
+    "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
@@ -61,7 +62,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/jquery": "^3.3.22",
-    "@types/node": "~14.14.7",
+    "@types/node": "~14.14.0",
     "codelyzer": "~6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -72,9 +73,20 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~3.2.0",
-    "tslint": "~6.1.0",
+    "ts-node": "~8.10.2",
     "typescript": "4.0.5",
-    "webpack-bundle-analyzer": "^3.6.0"
+    "webpack-bundle-analyzer": "^4.1.0"
+  },
+  "resolutions": {
+    "webpack": "5.4.0"
+  },
+  "browser": {
+    "http": false,
+    "https": false,
+    "net": false,
+    "path": false,
+    "stream": false,
+    "tls": false,
+    "fs": false
   }
 }
