--- a/angular.json
+++ b/angular.json
@@ -86,6 +86,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "aot": false,
             "browserTarget": "gd-frontend:build"
           },
           "configurations": {
