Disable browser caching for all files that don't get a hash string by Angular.

--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,18 @@
    RewriteCond %{REQUEST_FILENAME} !-d
    RewriteRule . /index.html [L]
 </IfModule>
+
+# Disable browser caching for all files that don't get a hash string by Angular.
+<FilesMatch "^(?!.*\.([0-9a-z]{20})\.).*$">
+  <IfModule mod_headers.c>
+    FileETag None
+    Header unset ETag
+    Header unset Pragma
+    Header unset Cache-Control
+    Header unset Last-Modified
+    Header set Pragma "no-cache"
+    Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+    Header set Expires "Mon, 1 Jan 1900 00:00:00 GMT"
+  </IfModule>
+
+</FilesMatch>
