--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.19.1",
+    "ng-multiselect-dropdown": "^0.3.9",
     "ng-recaptcha": "^6.0.2",
     "ngx-sharebuttons": "^8.0.4",
     "npm": "^6.4.1",
