--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.1100.1",
-    "@angular/animations": "^11.0.0",
+    "@angular-devkit/build-angular": "^12.2.18",
+    "@angular/animations": "^12.2.17",
     "@angular/cdk": "^11.0.0",
-    "@angular/common": "^11.0.0",
-    "@angular/compiler": "^11.0.0",
-    "@angular/core": "^11.0.0",
+    "@angular/common": "^12.2.17",
+    "@angular/compiler": "^12.2.17",
+    "@angular/core": "^12.2.17",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^11.0.0",
+    "@angular/forms": "^12.2.17",
     "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "^11.0.0",
-    "@angular/platform-browser-dynamic": "^11.0.0",
-    "@angular/router": "^11.0.0",
+    "@angular/platform-browser": "^12.2.17",
+    "@angular/platform-browser-dynamic": "^12.2.17",
+    "@angular/router": "^12.2.17",
     "@fortawesome/angular-fontawesome": "^0.8.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
@@ -54,12 +54,12 @@
     "ts-md5": "^1.2.2",
     "tslib": "^2.0.0",
     "vanilla-back-to-top": "^7.2.0",
-    "zone.js": "^0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "^11.0.1",
-    "@angular/compiler-cli": "^11.0.0",
-    "@angular/language-service": "^11.0.0",
+    "@angular/cli": "^12.2.18",
+    "@angular/compiler-cli": "^12.2.17",
+    "@angular/language-service": "^12.2.17",
     "@types/google.analytics": "0.0.36",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -68,7 +68,7 @@
     "codelyzer": "~6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -76,7 +76,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
-    "typescript": "4.0.5",
+    "typescript": "4.3.5",
     "webpack-bundle-analyzer": "^4.1.0"
   },
   "resolutions": {
