feat(scoreboard): new design

--- a/package.json
+++ b/package.json
@@ -35,16 +35,19 @@
     "@ngx-share/core": "^7.0.0",
     "@swimlane/ngx-charts": "^20.4.1",
     "@types/bootstrap": "^4.1.2",
+    "@types/leaflet": "^1.9.3",
     "ajv": "^6.5.5",
     "ajv-keywords": "^3.2.0",
     "bootstrap": "^5.0.0",
     "bootstrap-3-typeahead": "^4.0.2",
+    "bootstrap-icons": "^1.10.5",
     "cookieconsent": "^3.0.4",
     "core-js": "^2.5.7",
     "d3": "^6.7.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "jwt-decode": "^2.2.0",
+    "leaflet": "^1.9.4",
     "moment": "^2.19.1",
     "ng-multiselect-dropdown": "^1.0.0",
     "ng-recaptcha": "^12.0.0",
