--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/leaflet/dist/leaflet.css",
               "src/styles.scss",
               "src/gd-theme.scss",
               "src/assets/styles/style.scss"
