--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "moment": "^2.19.1",
     "ng-multiselect-dropdown": "^0.3.9",
     "ng-recaptcha": "^6.0.2",
+    "ngx-contextmenu": "^6.0.0",
     "npm": "^6.4.1",
     "rxjs": "^6.5.4",
     "ts-md5": "^1.2.2",
